update-manager (0.40) dapper; urgency=low

  * new upstream release
  * support for the AutomaticUpgrades spec added via the meta-release 
    information
  * data/update-manager.desktop.in: 
    - use X-KDE-SubstituteUID added and use gksu now

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Nov 2005 17:22:12 +0100

update-manager (0.37.1+svn20050404.15) breezy; urgency=low

  * added intltool to build-depends (for rosetta)

 -- Michael Vogt <mvo@debian.org>  Thu,  6 Oct 2005 17:30:38 +0200

update-manager (0.37.1+svn20050404.14) breezy; urgency=low

  * debian/rules:
    - run intltool-update -p for rosetta
  * src/update-manager.in:
    - release the lock before runing gnome-software-properties (ubuntu #17022)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  4 Oct 2005 22:28:43 +0200

update-manager (0.37.1+svn20050404.13) breezy; urgency=low

  * src/update-manager.in:
    - use the right column for type-ahead searching (ubuntu #16853)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  4 Oct 2005 11:01:58 +0200

update-manager (0.37.1+svn20050404.12) breezy; urgency=low

  * added locking support
  * use explicit path to python2.4 (thanks anthony!) (Ubuntu #16087)
  * CTRL-{w,q} close the update-manager window (Ubuntu #15729)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 28 Sep 2005 17:40:05 +0200

update-manager (0.37.1+svn20050404.11) breezy; urgency=low

  * fix a typo in the reload tooltip (thanks to P Jones) (ubuntu #14699)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Sep 2005 14:49:13 +0200

update-manager (0.37.1+svn20050404.10) breezy; urgency=low

  * fix for a typo in the source of the last upload (*cough*) 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 31 Aug 2005 15:39:53 +0200

update-manager (0.37.1+svn20050404.9) breezy; urgency=low

  * do a "save" dist-upgrade (add only, no removes)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 31 Aug 2005 12:09:20 +0200

update-manager (0.37.1+svn20050404.8) breezy; urgency=low
